Fix faith stretching

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -120,7 +120,7 @@ a:hover {
 .statement_of_faith {
   position: relative;
   font-family: 'Sansita One', cursive;
-  background: linear-gradient(160deg, rgba(246,143,26,.5), rgba(120,181,202,.5));
+  background: linear-gradient(160deg, rgba(246,143,26,.6), rgba(120,181,202,.6));
   z-index: 3;
   &:before {
     content: '';
@@ -129,7 +129,7 @@ a:hover {
     width: 100%;
     height: 100%;
     background: transparent url('three-sides.png') repeat;
-    opacity: .1;
+    opacity: .05;
     z-index: 2;
   }
 }
@@ -137,12 +137,23 @@ a:hover {
 .white_box {
   position: relative;
   width: 100%;
-  height: 90px;
+  height: 100px;
   margin: 10px 0;
   padding: 0 10px;
   background-color: rgba($crcc-white, .7);
   text-align: center;
-  font-family: 'Roboto', cursive;
   box-sizing: border-box;
   z-index: 3;
+
+  .content {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 30%;
+    margin: auto;
+    font-family: 'Roboto', cursive;
+    font-size: 1.3em;
+  }
 }
